--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Ignore Docker files
-docker-compose.yml
-
 # Ignore global database files
 database/data/
 database/logs/
@@ -8,3 +5,6 @@ database/pgadmin-config/
 database/pgadmin-data/
 database/pg_hba.conf
 database/postgresql.conf
+
+# Ignore local configuration files
+.env
